# BlogMarketing

./: .env.example  .gitignore  BlogMarketing.code-workspace  CLAUDE.md  DOCUMENTATION.md  Log.txt  PRODUCT_CAPABILITIES.md  README.md  ROADMAP.md  SESSION.md  blog_generator.py  build.bat  database.py  gui.py  html_renderer.py  image_fetcher.py  linkedin_auth.py  linkedin_generator.py  linkedin_publisher.py  llm_client.py  main.py  paths.py  phoenix.spec  phoenix_gui.py  pyproject.toml  requirements.txt  save_linkedin_cookies.py  scheduler.py  scheduler_config.json  signal_sources.json  smart_scheduler.py  topic_researcher.py  tracker.csv  tracker.py  trend_research.py  website_publisher.py
Blogs/: 2026-03-06-ai-in-erp-strategic-roadmap.html  2026-03-06-cloud-erp-providers-for-mid-sized-businesses.html  2026-03-06-designing-effective-kpis.html  2026-03-06-modern-business-intelligence.html  2026-03-07-cloud-based-business-intelligence.html  2026-03-07-data-driven-transformation.html  2026-03-07-optimizing-olap-query-times.html  etl-vs-elt.html
LinkedIn Posts/: 2026-03-06-day01-modern-business-intelligence-landscape.txt  2026-03-06-day07-designing-effective-kpis.txt  2026-03-07-ai-for-business.txt  2026-03-07-ai-in-business-analytics.txt  2026-03-07-ai-powered-bi.txt  2026-03-07-automating-monthly-reports.txt  2026-03-07-data-analytics-portfolio.txt  2026-03-07-data-driven-business.txt  2026-03-07-data-driven-sustainability-unlocking-the-pote.txt  2026-03-07-data-driven-transformation-how-business-intel.txt  2026-03-07-data-governance-for-modern-organizations.txt  (+44 more)
(+172 files in other folders)
