[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "phoenix-marketing-engine"
version = "1.0.0"
description = "Local-first AI marketing automation system for Phoenix Solutions."
requires-python = ">=3.11"
dependencies = [
    "groq>=0.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "APScheduler>=3.10.4",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "feedparser>=6.0.11",
    "pydantic>=2.0.0",
    "playwright>=1.40.0",
]

[project.scripts]
phoenix-gui = "phoenix_gui:main"
phoenix-api = "api.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["blogpilot*", "api*", "automation*"]

[tool.setuptools.package-data]
"*" = [
    "Blogs/_new-post.html",
    "Prompts/*.txt",
    "MarketingSchedule/*.json",
    "api/static/*",
]
